--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "prisma": "^6.6.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
