--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meucd",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -41,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "use-mask-input": "^3.4.2",
